# hkd-food-delivery

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .~lock.HKD_시장분석_보고서.xlsx#  HKD_JWT_인증체계_적용_계획서.md  HKD_Railway_배포가이드.md  HKD_고객페이지_Airbnb_리디자인.jsx  HKD_다국어화_계획서.md  HKD_리팩토링_계획서.md  HKD_배포가이드.md  HKD_복수식당_픽업추적_설계서.md  HKD_시장분석_보고서.xlsx  HKD_시장분석_통합보고서_Ver2.1.docx  cleanup_restaurants.sh  collect_restaurants.sh  commitlint.config.js  package.json  pyproject.toml  register_remaining.sh  requirements.txt  test_dc_direct.py  test_diningcode.py  test_google_diningcode.py  test_kakao_place.py  test_naver_place.py  test_naver_v2.py
.github/: HARNESS_GUIDE.md  labeler.yml
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: agent-pr-staging.yml  auto-label.yml  ci.yml  db-migration.yml  deploy-edge-functions.yml  deploy-production.yml  deploy-staging.yml  promote-production.yml  rollback.yml
architecture/: README.md  deploy.sh
architecture/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  fly.toml  import-restaurants.ts  jest.config.js  package.json  test-api.ts  test-db-import.ts  test-delivery.js  test-kakao-scrape.ts  test-scrape-mock.js  test-scrape.ts  tsconfig.json  (+1 more)
data/: collected_restaurants.json
docs/: TEST-PLAN.md
reports/: HKD_상용서비스_점검표.xlsx  HKD_시장분석_보고서.docx  HKD_시장분석_시뮬레이션.docx  HKD_시장분석_통합보고서.docx  HKD_시장분석_통합보고서_Ver2.2.docx  HKD_외부API_목록.xlsx  한경배달_상용화_분석보고서.docx
scrapers/: __init__.py  diningcode_scraper.py  http_client.py  kakao_scraper.py  main.py  models.py  naver_scraper.py
scripts/: agent-commit.sh  bootstrap-harness.sh  config.sh  push-to-github.command  register_restaurants.sh  setup-branch-protection.sh  setup-coding-harness.sh  setup-github-secrets.sh  utils.sh
tests/: __init__.py
(+345 files in other folders)
